Make Symbol an enum